--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,13 @@
     "require": {
         "php": ">=7.1.3",
         "laravel/lumen-framework": "5.7.*",
-        "vlucas/phpdotenv": "~2.2"
+        "vlucas/phpdotenv": "~2.2",
+        "illuminate/redis": "5.7.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
-        "phpunit/phpunit": "~7.0",
-        "mockery/mockery": "~1.0"
+        "mockery/mockery": "~1.0",
+        "phpunit/phpunit": "~7.0"
     },
     "autoload": {
         "classmap": [
